# core

src/ir_decoder/: .gitignore  Android.mk  CMakeLists.txt  ir_decoder.vcxproj
src/ir_decoder/include/: ir_decode.h
src/ir_decoder/jni/java/net/irext/decode/sdk/: IRDecode.java
src/ir_decoder/jni/src/: ir_decode_jni.c  ir_decode_jni.h
src/ir_decoder/src/: ir_ac_parse_parameter.c  ir_decode.c  ir_decode_test.c  ir_test_main.c
src/ir_decoder/src/include/: ir_ac_control.h  ir_decode.h
src/ir_encoder/: .gitignore  ir_command_encode.py
